<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Commander</string>
    <string name="action_settings">设置</string>
    <string name="send">发送</string>
    <string name="image">图片</string>
    <string name="record">录像</string>
    <string name="file">文件</string>
    <string name="voice">多人语音</string>
    <string name="position">位置</string>
    <string name="video">视频</string>

    <!-- main activity -->
    <string name="title_activity_main">应急指挥</string>
    <string name="group">指挥组</string>
    <string name="create_group">创建指挥组</string>
    <string name="system_message">系统消息</string>
    <string name="title_activity_group">指挥组</string>

    <!-- group activity -->
    <string name="action_create">新建指挥组</string>
    <string name="group_search">搜索</string>

    <!-- create group activity -->
    <string name="title_activity_select_member">选择成员</string>
    <string name="action_comform">确定</string>
    <string name="search_member">搜索（关别，部门，姓名）</string>
    <string name="title_activity_chat_setting">聊天设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_member_profile">详细资料</string>
    <string name="title_activity_change_group_name">修改组名</string>
    <string name="title_activity_create_group">创建群聊</string>
    <string name="action_save">保存</string>
    <string name="dialog_item">取消</string>
    
    <string name="multi_voice_invive">邀请新成员</string>
    <string name="multi_voice_voice_chat">语音对讲</string>
    <string name="multi_voice_vedio_chat">视频对讲</string>
    <string name="multi_voice_handfree">免提</string>
    <string name="multi_voice_silence">静音</string>
	
	<!-- Dialog 相关 -->
    <string name="btn_cancle">取消</string>

    <string name="hint">提示</string>
    <string name="joint_group">%1$s邀请您加入%2$s，请选择是否加入？</string>
    <string name="btn_join">加入</string>
    <string name="btn_refuse">拒绝</string>
    
    <string name="joined_group">您已加入加入%1$s</string>
    <string name="btn_view_later">稍后查看</string>
    <string name="btn_view_now">立即进入</string>

    <string name="remove_all_message">确定删除指挥组的消息记录吗？</string>
    <string name="btn_empty">清空消息记录</string>

</resources>
